--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Theme</title>
+    <title>Confusing Statistics Concept</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,8 +61,10 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <h1>四張圖解讀蘋果最新財報</h1>
+            <h3>presented by Ian Mak</h3>
+            <h3>translated by Chan Yang</h3>
+            <h3>reported by Financial Times Chinese</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -73,8 +75,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                    <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                    <h2>蘋果2016業績現隱憂</h2>
+                    <p class="lead">蘋果去年的十月公布第四季度業績，純利為 90 億美元（約700億港元），比2015年同期跌19%，業務約繼續集中在國際市場，佔62%。然而公司對前境依然樂觀，行政總裁Tim Cook 表示九月份業績表現強勁，iPhone 7系列及和 Apple Watch反應熱烈有助增長營業額。但事實上iPhone產品正面臨成長困境。</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -88,7 +90,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
+                    <h2>四大問題</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
@@ -98,9 +100,9 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>銷售減少</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>蘋果銷售下降7.7%，是近15年來的首次下降，並從2015年27.9%的增長率急劇逆轉。</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -111,9 +113,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>iPhone的困境</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>iPhone產品銷量連續第三個季度下降，第四季度賣出4550萬部，比去年同期下跌5%。蘋果既要在將近飽和的發達國家開闢市場，又要與新興市場中的其他公司（如華為、OPPO等）激烈競爭。</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -124,9 +126,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>其他業務</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>蘋果一直在努力擴大它的服務業務，包括蘋果音樂Apple Music，虛擬錢包Apple Pay和售後服務AppleCare。</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -137,9 +139,9 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>中國市場疲軟</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>由於市場激烈競爭和亞洲國家經濟增長放緩，第四季中國市場銷售額下滑近三分之一。</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -156,7 +158,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h3>蘋果股價今年上半年弱勢，5月中曾跌穿90元，但截至周二收市，已由低位反彈32%，主要拜iPhone 7銷情樂觀及三星Note 7停產所賜。但結果只是略勝預期，拖累股價回吐。毛利率下滑亦堪憂，預示蘋果本季盈利將遜預期。</h3>
         </div>
     </aside>
 
