--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <strong>銷售減少</strong>
                                 </h4>
                                 <p>蘋果銷售下降7.7%，是近15年來的首次下降，並從2015年27.9%的增長率急劇逆轉。</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="#portfolio" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -114,7 +114,7 @@
                                     <strong>iPhone的困境</strong>
                                 </h4>
                                 <p>iPhone產品銷量連續第三個季度下降，第四季度賣出4550萬部，比去年同期下跌5%。蘋果既要在將近飽和的發達國家開闢市場，又要與新興市場中的其他公司（如華為、OPPO等）激烈競爭。</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="#portfolio" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -127,7 +127,7 @@
                                     <strong>其他業務</strong>
                                 </h4>
                                 <p>蘋果一直在努力擴大它的服務業務，包括蘋果音樂Apple Music，虛擬錢包Apple Pay和售後服務AppleCare。</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="#portfolio" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -140,7 +140,7 @@
                                     <strong>中國市場疲軟</strong>
                                 </h4>
                                 <p>由於市場激烈競爭和亞洲國家經濟增長放緩，第四季中國市場銷售額下滑近三分之一。</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="#portfolio" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -156,7 +156,9 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h3>蘋果股價今年上半年弱勢，5月中曾跌穿90元，但截至周二收市，已由低位反彈32%，主要拜iPhone 7銷情樂觀及三星Note 7停產所賜。但結果只是略勝預期，拖累股價回吐。毛利率下滑亦堪憂，預示蘋果本季盈利將遜預期。</h3>
+            <h3>蘋果股價今年上半年弱勢，5月中曾跌穿90元。</h3>
+            <h3>截至周二收市，已由低位反彈32%，主要拜iPhone 7銷情樂觀及三星Note 7停產所賜。</h3>
+            <h3>但結果只是略勝預期，拖累股價回吐。毛利率下滑亦堪憂，預示蘋果本季盈利將遜預期。</h3>
         </div>
     </aside>
 
@@ -165,40 +167,38 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Our Work</h2>
+                    <h2>圖表</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="#services">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="#services">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="#services">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="#services">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -212,9 +212,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <h3>參考資料</h3>
+                    <a href="http://big5.ftchinese.com/story/001069892#adchannelID=2000" class="btn btn-lg btn-light">Financial Times</a>
+                    <a href="http://startupbeat.hkej.com/?p=36327" class="btn btn-lg btn-dark">信報 Startup Beat</a>
                 </div>
             </div>
         </div>
@@ -225,7 +225,7 @@
         <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
         <br />
         <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+            <a href="https://www.google.com.hk/maps/search/apple+store/@22.2878431,114.1711748,13z/data=!3m1!4b1"></a>
         </small>
     </section>
 
@@ -234,29 +234,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
-                    </h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
-                        </li>
-                    </ul>
+                 
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="https://www.facebook.com/apple/"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/apple"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
-                    <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
                 </div>
             </div>
         </div>
