--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>四張圖解讀蘋果最新財報</h1>
+            <h1>四張圖表解讀蘋果2016業績</h1>
             <h3>presented by Ian Mak</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
