--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                                 </h4>
                                 <p>蘋果銷售下降7.7%，是近15年來的首次下降，並從2015年27.9%的增長率急劇逆轉。</p>
                                 <a href="#portfolio" class="btn btn-light">Learn More</a>
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="glyphicon glyphicon-triangle-bottom"></i>
+                                <a href="#portfolio"></a>
+                            </span>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
