--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                                     <strong>銷售減少</strong>
                                 </h4>
                                 <p>蘋果銷售下降7.7%，是近15年來的首次下降，並從2015年27.9%的增長率急劇逆轉。</p>
+                                <span>
                                 <a href="#portfolio" class="glyphicon glyphicon-triangle-bottom"></a>
+                                </span>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
