--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 </h4>
                                 <p>蘋果銷售下降7.7%，是近15年來的首次下降，並從2015年27.9%的增長率急劇逆轉。</p>
                                 <span>
-                                <a href="#portfolio" class="glyphicon glyphicon-triangle-bottom"></a>
+                                <a href="#portfolio" class="glyphicon glyphicon-arrow-down" color="white"></a>
                                 </span>
                             </div>
                         </div>
