--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 </h4>
                                 <p>蘋果銷售下降7.7%，是近15年來的首次下降，並從2015年27.9%的增長率急劇逆轉。</p>
                                 <span>
-                                <a href="#portfolio" class="glyphicon glyphicon-arrow-down fa-4x" style="color:white"></a>
+                                <a href="#portfolio" class="glyphicon glyphicon-menu-down fa-4x" style="color:white"></a>
                                 </span>
                             </div>
                         </div>
@@ -116,7 +116,9 @@
                                     <strong>iPhone的困境</strong>
                                 </h4>
                                 <p>iPhone產品銷量連續第三個季度下降，第四季度賣出4550萬部，比去年同期下跌5%。蘋果既要在將近飽和的發達國家開闢市場，又要與新興市場中的其他公司（如華為、OPPO等）激烈競爭。</p>
-                                <a href="#portfolio" class="btn btn-light">Learn More</a>
+                                <span>
+                                <a href="#portfolio" class="glyphicon glyphicon-menu-down fa-4x" style="color:white"></a>
+                                </span>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -129,7 +131,9 @@
                                     <strong>其他業務</strong>
                                 </h4>
                                 <p>蘋果一直在努力擴大它的服務業務，包括蘋果音樂Apple Music，虛擬錢包Apple Pay和售後服務AppleCare。</p>
-                                <a href="#portfolio" class="btn btn-light">Learn More</a>
+                                <span>
+                                <a href="#portfolio" class="glyphicon glyphicon-menu-down fa-4x" style="color:white"></a>
+                                </span>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -142,7 +146,9 @@
                                     <strong>中國市場疲軟</strong>
                                 </h4>
                                 <p>由於市場激烈競爭和亞洲國家經濟增長放緩，第四季中國市場銷售額下滑近三分之一。</p>
-                                <a href="#portfolio" class="btn btn-light">Learn More</a>
+                                <span>
+                                <a href="#portfolio" class="glyphicon glyphicon-menu-down fa-4x" style="color:white"></a>
+                                </span>
                             </div>
                         </div>
                     </div>
