--- a/index.html
+++ b/index.html
@@ -47,13 +47,10 @@
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
+                <a href="#services" onclick=$("#menu-close").click();>Problem</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Chart</a>
             </li>
         </ul>
     </nav>
@@ -163,7 +160,7 @@
 
     <!-- Callout -->
     <aside class="callout">
-        <div class="text-vertical-center">
+        <div class="text-vertical-center btn btn-dark btn-lg">
             <h3>蘋果股價今年上半年弱勢，5月中曾跌穿90元。</h3>
             <h3>截至周二收市，已由低位反彈32%，主要拜iPhone 7銷情樂觀及三星Note 7停產所賜。</h3>
             <h3>但結果只是略勝預期，拖累股價回吐。毛利率下滑亦堪憂，預示蘋果本季盈利將遜預期。</h3>
